The calendar icon (top right) disappeared on mobile when you went from landscape view to portrait view #231

--- a/client/app/views/styles/_responsive.styl
+++ b/client/app/views/styles/_responsive.styl
@@ -49,6 +49,7 @@
 
         li
             display: inline-block
+            float left
 
         #import-menu-button, span
             display: none
